--- a/src/app/parts/toolbar/toolbar.component.html
+++ b/src/app/parts/toolbar/toolbar.component.html
@@ -2,5 +2,6 @@
   <button (click)="menuToggled.emit(true)" mat-icon-button>
     <mat-icon>menu</mat-icon>
   </button>
-  <span><a class="button" routerLink="/">Angular Playground</a></span>
+  <span><a class="button" routerLink="/">Angular Dashboard</a></span>
+  <span class="example-spacer"></span>
 </mat-toolbar>
