--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,24 @@
-<p>dashboard works!</p>
+<h3>Dashboard</h3>
+
+<div *ngIf="loading">
+  <!--  <mat-progress-bar mode="indeterminate"></mat-progress-bar>-->
+  <mat-spinner></mat-spinner>
+</div>
+
+
+<div class="col-12" *ngIf="!loading">
+  <div class="row">
+    <div class="col-4">
+      <mat-card>
+        <mat-card-title>Asteroid count</mat-card-title>
+        <canvas
+          baseChart
+          [data]="pieChartData"
+          [type]="'pie'"
+          [options]="pieChartOptions"
+          [plugins]="pieChartPlugins">
+        </canvas>
+      </mat-card>
+    </div>
+  </div>
+</div>
