--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,13 @@
   <mat-drawer #drawer [(opened)]="opened" class="example-sidenav" mode="side">
     <mat-sidenav-container class="example-sidenav-container" autosize>
       <mat-sidenav #sidenav class="example-sidenav" mode="side" opened="true">
-        <mat-nav-list class="dashboard">
-          <a mat-list-item (click)="toggleActive($event)" *ngFor="let item of menuItems" routerLink="{{item.link}}">
+        <mat-nav-list class="dashboard" [routerLinkActive]="['class1']">
+          <a mat-list-item (click)="toggleActive($event)" *ngFor="let item of menuItems" routerLink="{{item.link}}" routerLinkActive="active">
             <mat-icon mat-list-icon>{{item.icon}}</mat-icon>
             <p matLine *ngIf="isExpanded">{{item.name}}</p>
           </a>
           <mat-divider></mat-divider>
-          <a mat-list-item (click)="toggleActive($event)" routerLinkActive="active">
+          <a mat-list-item (click)="toggleActive($event)">
             <mat-icon mat-list-icon>help</mat-icon>
             <p matLine *ngIf="isExpanded">Help</p>
           </a>
