--- a/src/app/pages/table/table.component.html
+++ b/src/app/pages/table/table.component.html
@@ -1,50 +1,149 @@
 <h4>Table</h4>
-<!-- Mat Table -->
-<div class="mat-elevation-z8">
-  <div *ngIf="loading">
-    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+<!-- Card stats -->
+<div class="row g-6 mb-6">
+  <div class="col-xl-3 col-sm-6 col-12">
+    <div class="card shadow border-0">
+      <div class="card-body">
+        <div class="row">
+          <div class="col">
+            <span class="h6 font-semibold text-muted text-sm d-block mb-2">Budget</span>
+            <span class="h3 font-bold mb-0">$750.90</span>
+          </div>
+          <div class="col-auto">
+            <div class="icon icon-shape bg-tertiary text-white text-lg rounded-circle">
+              <i class="bi bi-credit-card"></i>
+            </div>
+          </div>
+        </div>
+        <div class="mt-2 mb-0 text-sm">
+<span class="badge badge-pill bg-soft-success text-success me-2">
+<i class="bi bi-arrow-up me-1"></i>13%
+</span>
+          <span class="text-nowrap text-xs text-muted">Since last month</span>
+        </div>
+      </div>
+    </div>
   </div>
-  <mat-table #table [dataSource]="dataSource" *ngIf="!loading">
-    <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef> Asteroid Name</mat-header-cell>
-      <mat-cell *matCellDef="let item"> {{item.name}} </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="size">
-      <mat-header-cell *matHeaderCellDef> Size</mat-header-cell>
-      <mat-cell *matCellDef="let item">
-        {{item.estimated_diameter.kilometers.estimated_diameter_min}}
-        - {{item.estimated_diameter.kilometers.estimated_diameter_max}}
-      </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="ed_min">
-      <mat-header-cell *matHeaderCellDef> Estimated Diameter (Min)</mat-header-cell>
-      <mat-cell *matCellDef="let item">{{item.estimated_diameter.kilometers.estimated_diameter_min}}</mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="ed_max">
-      <mat-header-cell *matHeaderCellDef> Estimated Diameter (Max)</mat-header-cell>
-      <mat-cell *matCellDef="let item">{{item.estimated_diameter.kilometers.estimated_diameter_max}}</mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="severity">
-      <mat-header-cell *matHeaderCellDef> Risk</mat-header-cell>
-      <mat-cell *matCellDef="let item">
-        <span *ngIf="item.is_potentially_hazardous_asteroid">Dangerous</span>
-        <span *ngIf="!item.is_potentially_hazardous_asteroid">Safe</span>
-      </mat-cell>
-    </ng-container>
-    <mat-header-row *matHeaderRowDef="tableColumns; sticky: true"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: tableColumns;"
-             (click)="selectedRow(row)" matRipple
-             [ngClass]="{
-             'safe': !row.is_potentially_hazardous_asteroid,
-             'dangerous': row.is_potentially_hazardous_asteroid
-             }"
-    ></mat-row>
-    <!--    (click)="$event ? selection.toggle(row): null"-->
-    <!--    matRipple></mat-row>-->
-    <!--    [class.selected-row]="selection.isSelected(row)"-->
-  </mat-table>
-  <mat-paginator
-    [length]="resultsLength" [pageSize]="pageSize"
-    [pageSizeOptions]="pageSizeOptions"
-    (page)="handlePageEvent($event)" showFirstLastButtons></mat-paginator>
+  <div class="col-xl-3 col-sm-6 col-12">
+    <div class="card shadow border-0">
+      <div class="card-body">
+        <div class="row">
+          <div class="col">
+            <span class="h6 font-semibold text-muted text-sm d-block mb-2">New projects</span>
+            <span class="h3 font-bold mb-0">215</span>
+          </div>
+          <div class="col-auto">
+            <div class="icon icon-shape bg-primary text-white text-lg rounded-circle">
+              <i class="bi bi-people"></i>
+            </div>
+          </div>
+        </div>
+        <div class="mt-2 mb-0 text-sm">
+<span class="badge badge-pill bg-soft-success text-success me-2">
+<i class="bi bi-arrow-up me-1"></i>30%
+</span>
+          <span class="text-nowrap text-xs text-muted">Since last month</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-xl-3 col-sm-6 col-12">
+    <div class="card shadow border-0">
+      <div class="card-body">
+        <div class="row">
+          <div class="col">
+            <span class="h6 font-semibold text-muted text-sm d-block mb-2">Total hours</span>
+            <span class="h3 font-bold mb-0">1.400</span>
+          </div>
+          <div class="col-auto">
+            <div class="icon icon-shape bg-info text-white text-lg rounded-circle">
+              <i class="bi bi-clock-history"></i>
+            </div>
+          </div>
+        </div>
+        <div class="mt-2 mb-0 text-sm">
+<span class="badge badge-pill bg-soft-danger text-danger me-2">
+<i class="bi bi-arrow-down me-1"></i>-5%
+</span>
+          <span class="text-nowrap text-xs text-muted">Since last month</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-xl-3 col-sm-6 col-12">
+    <div class="card shadow border-0">
+      <div class="card-body">
+        <div class="row">
+          <div class="col">
+            <span class="h6 font-semibold text-muted text-sm d-block mb-2">Work load</span>
+            <span class="h3 font-bold mb-0">95%</span>
+          </div>
+          <div class="col-auto">
+            <div class="icon icon-shape bg-warning text-white text-lg rounded-circle">
+              <i class="bi bi-minecart-loaded"></i>
+            </div>
+          </div>
+        </div>
+        <div class="mt-2 mb-0 text-sm">
+          <span class="badge badge-pill bg-soft-success text-success me-2">
+            <i class="bi bi-arrow-up me-1"></i>10%
+          </span>
+          <span class="text-nowrap text-xs text-muted">Since last month</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Mat Table -->
+<div class="row">
+  <div class="col-12">
+    <div class="mat-elevation-z8">
+      <div *ngIf="loading">
+        <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+      </div>
+      <mat-table #table [dataSource]="dataSource" *ngIf="!loading">
+        <ng-container matColumnDef="name">
+          <mat-header-cell *matHeaderCellDef> Asteroid Name</mat-header-cell>
+          <mat-cell *matCellDef="let item"> {{item.name}} </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="size">
+          <mat-header-cell *matHeaderCellDef> Size</mat-header-cell>
+          <mat-cell *matCellDef="let item">
+            {{item.estimated_diameter.kilometers.estimated_diameter_min}}
+            - {{item.estimated_diameter.kilometers.estimated_diameter_max}}
+          </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="ed_min">
+          <mat-header-cell *matHeaderCellDef> Estimated Diameter (Min)</mat-header-cell>
+          <mat-cell *matCellDef="let item">{{item.estimated_diameter.kilometers.estimated_diameter_min}}</mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="ed_max">
+          <mat-header-cell *matHeaderCellDef> Estimated Diameter (Max)</mat-header-cell>
+          <mat-cell *matCellDef="let item">{{item.estimated_diameter.kilometers.estimated_diameter_max}}</mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="severity">
+          <mat-header-cell *matHeaderCellDef> Risk</mat-header-cell>
+          <mat-cell *matCellDef="let item">
+            <span *ngIf="item.is_potentially_hazardous_asteroid">Dangerous</span>
+            <span *ngIf="!item.is_potentially_hazardous_asteroid">Safe</span>
+          </mat-cell>
+        </ng-container>
+        <mat-header-row *matHeaderRowDef="tableColumns; sticky: true"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: tableColumns;"
+                 (click)="selectedRow(row)" matRipple
+                 [ngClass]="{
+'safe': !row.is_potentially_hazardous_asteroid,
+'dangerous': row.is_potentially_hazardous_asteroid
+}"
+        ></mat-row>
+        <!--    (click)="$event ? selection.toggle(row): null"-->
+        <!--    matRipple></mat-row>-->
+        <!--    [class.selected-row]="selection.isSelected(row)"-->
+      </mat-table>
+      <mat-paginator
+        [length]="resultsLength" [pageSize]="pageSize"
+        [pageSizeOptions]="pageSizeOptions"
+        (page)="handlePageEvent($event)" showFirstLastButtons></mat-paginator>
+    </div>
+  </div>
 </div>
