Upgraded Angular material to v16

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
 <div class="col-12" *ngIf="!loading">
   <div class="row">
     <div class="col-3">
-      <mat-card>
+      <mat-card appearance="outlined">
         <mat-card-title>Asteroid count</mat-card-title>
         <canvas
           baseChart
@@ -21,7 +21,7 @@
       </mat-card>
     </div>
     <div class="col-9">
-      <mat-card>
+      <mat-card appearance="outlined">
         <mat-card-title>Bar Chart</mat-card-title>
         <canvas
           baseChart
