Upgraded Angular to v17

--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -4,7 +4,7 @@
       <div class="d-flex flex-column align-items-center text-center p-3 py-5">
         <img class="rounded-circle mt-5" width="150px" *ngIf="profilePhoto" [src]="profilePhoto" alt="">
         <span class="font-weight-bold">John Anderson</span>
-        <span class="text-black-50">anderson@gmail.com</span>
+        <span class="text-black-50">anderson&#64;gmail.com</span>
       </div>
     </div>
     <div class="col-md-5 border-right">
